# CI-CD-Monitoring-MetroPT-3-

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/artifacts/models/metropt/dm/: model_20260701_114753.joblib
data/artifacts/models/metropt/dr/: model_20260701_112733.joblib
data/artifacts/models/metropt/primary/: model_20260701_101149.joblib
metropt/: dtos.py  kafka_utils.py  storage.py
metropt/UI/: dashboard.py
metropt/config/: settings.py
metropt/scripts/: consume_features.py  consume_predictions.py  consume_processed.py  consume_raw.py  consume_shifts  consume_updates.py  create_topics.py  explore_data.py  orchestrator.py  train_primary.py
metropt/services/: base.py  data_gate.py  data_generator.py  dim_reducer.py  distribution_monitor.py  feature_extractor.py  primary_model.py  transfer_learning.py
metropt/tests/: test_dtos.py
scripts/: explore_data.py
services/: base.py
tests/: test_data_gate.py  test_dim_reducer.py  test_distribution_monitor.py  test_dtos.py  test_feature_extractor.py  test_primary_model.py  test_transfer_learning.py
