[project]
name = "metropt"
version = "0.1.0"
description = "Adaptive condition monitoring on MetroPT-3"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.7",
    "kafka-python>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "scipy>=1.13",
    "joblib>=1.4",
    "pyarrow>=16.1",
    "streamlit>=1.36",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.5", "black>=24.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metropt"]
